--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -6,50 +6,66 @@
     <link rel="stylesheet" href="">
     <title>main</title>
 </head>
-<body>
-<main layout:fragment="content">
-    <div class="container mx-auto py-4">
-        <!-- 신간도서 섹션 -->
-        <div class="my-10">
-            <div class="w-full mx-auto">
-                <span class="font-bold text-2xl sm:text-4xl">신간도서</span>
-            </div>
-            <!-- 도서 목록 -->
-            <div class="flex flex-wrap justify-center mt-8">
-                <!-- 각 도서 -->
-                <div th:each="newBook : ${newBooks}" class="w-full sm:w-1/2 md:w-1/2 lg:w-1/4 xl:w-1/4 p-4">
-                    <div class="text-center">
-                        <a th:href="${newBook.link}">
-                            <img class="mx-auto w-48 h-72" th:src="${newBook.coverImg}" alt="Book Cover">
-                        </a>
-                        <a th:href="${newBook.link}" class="block text-lg font-semibold my-[30px]"
-                           th:text="${newBook.title}">Title</a>
-                        <!-- ... -->
-                    </div>
-                </div>
-            </div>
+<body layout:fragment="content">
+<div class="container mx-auto py-4">
+    <!-- 신간도서 섹션 -->
+    <div class="my-10">
+        <div class="w-full mx-auto">
+            <span class="font-bold text-2xl sm:text-4xl">신간도서</span>
         </div>
-
-        <div class="my-10">
-            <div class="w-full mx-auto">
-                <span class="font-bold text-2xl sm:text-4xl">베스트셀러</span>
-            </div>
-            <!-- 도서 목록 -->
-            <div class="flex flex-wrap justify-center mt-8">
-                <!-- 각 도서 -->
-                <div th:each="bestseller : ${bestsellers}" class="w-full sm:w-1/2 md:w-1/2 lg:w-1/4 xl:w-1/4 p-4">
-                    <div class="text-center">
-                        <a th:href="${bestseller.link}">
-                            <img class="mx-auto w-48 h-72" th:src="${bestseller.coverImg}" alt="Book Cover">
-                        </a>
-                        <a th:href="${bestseller.link}" class="block text-lg font-semibold my-[30px]"
-                           th:text="${bestseller.title}">Title</a>
-                        <!-- ... -->
+        <!-- 도서 목록 -->
+        <div class="flex flex-wrap justify-center mt-8">
+            <!-- 각 도서 -->
+            <div th:each="newBook : ${newBooks}" class="w-full sm:w-1/2 md:w-1/4 lg:w-1/4 xl:w-1/4 p-4">
+                <div class="text-center">
+                    <a th:href="${newBook.link}">
+                        <img class="mx-auto w-48 h-72" th:src="${newBook.coverImg}" alt="Book Cover">
+                    </a>
+                    <a th:href="${newBook.link}" class="block text-lg font-semibold my-[30px]"
+                       th:text="${newBook.title}">Title</a>
+                    <span th:text="${newBook.author}" class="block text-gray-600 mb-[20px]"></span>
+                    <span th:text="${newBook.publisher}" class="block text-gray-600 mb-[20px]"></span>
+                    <div class="mt-2">
+                        <span class="text-gray-500">정가 : </span>
+                        <span class="line-through text-gray-500" th:text="${newBook.priceStandard}"></span>
+                        <span class="text-gray-500">할인가 : </span>
+                        <span th:text="${newBook.priceSales}" class="text-green-600"></span>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</main>
+
+    <div class="my-10">
+        <div class="w-full mx-auto">
+            <span class="font-bold text-2xl sm:text-4xl">베스트셀러</span>
+        </div>
+        <!-- 도서 목록 -->
+        <div class="flex flex-wrap justify-center mt-8">
+            <!-- 각 도서 -->
+            <div th:each="bestseller : ${bestsellers}" class="w-full sm:w-1/2 md:w-1/4 lg:w-1/4 xl:w-1/4 p-4">
+                <div class="text-center">
+                    <a th:href="${bestseller.link}">
+                        <img class="mx-auto w-48 h-72" th:src="${bestseller.coverImg}" alt="Book Cover">
+                    </a>
+                    <a th:href="${bestseller.link}" class="block text-lg font-semibold my-[30px]"
+                       th:text="${bestseller.title}">Title</a>
+                    <span th:text="${bestseller.author}" class="block text-gray-600 mb-[20px]"></span>
+                    <span th:text="${bestseller.publisher}" class="block text-gray-600 mb-[20px]"></span>
+                    <div class="mt-2">
+                        <span class="text-gray-500">정가 : </span>
+                        <span th:text="${bestseller.priceStandard}" class="line-through text-gray-500"></span>
+                        <span class="text-gray-500">할인가 : </span>
+                        <span th:text="${bestseller.priceSales}" class="text-green-600"></span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
+
+
+
+
