--- a/src/main/resources/templates/member/profile.html
+++ b/src/main/resources/templates/member/profile.html
@@ -15,6 +15,19 @@
                 프로파일
             </h1>
 
+            <!--회원프로필사진-->
+            <div class="form-control">
+                <label class="label">
+                    <span class="label-text">프로필이미지</span>
+                </label>
+                <img class="preview-image h-40 w-40 rounded-full border-solid border-black border"
+                     th:if="${#authentication.principal.imgFilePath}"
+                     th:src="${#authentication.principal.imgFilePath}"/>
+                <img class="preview-image h-40 w-40 rounded-full border-solid border-black border"
+                     src="https://mblogthumb-phinf.pstatic.net/MjAyMDExMDFfMyAg/MDAxNjA0MjI5NDA4NDMy.5zGHwAo_UtaQFX8Hd7zrDi1WiV5KrDsPHcRzu3e6b8Eg.IlkR3QN__c3o7Qe9z5_xYyCyr2vcx7L_W1arNFgwAJwg.JPEG.gambasg/%EC%9C%A0%ED%8A%9C%EB%B8%8C_%EA%B8%B0%EB%B3%B8%ED%94%84%EB%A1%9C%ED%95%84_%ED%8C%8C%EC%8A%A4%ED%85%94.jpg?type=w800"
+                     th:unless="${#authentication.principal.imgFilePath}"/>
+            </div>
+
             <!--회원아이디-->
             <div class="flex flex-col gap-3">
                 <div class="form-control">
@@ -133,15 +146,7 @@
                     <div class="badge badge-primary" th:unless="${#authentication.principal.roadAddress != null && #authentication.principal.extraAddress != null && #authentication.principal.detailAddress != null && #authentication.principal.postalNum != null}" th:text="미등록"></div>
                 </div>
 
-                <!--회원프로필사진-->
-                <div class="form-control">
-                    <label class="label">
-                        <span class="label-text">프로필이미지</span>
-                    </label>
-                    <img alt="" th:if="${#authentication.principal.imgFilePath}" th:src="${#authentication.principal.imgFilePath}"/>
-                    <img alt="" src="https://mblogthumb-phinf.pstatic.net/MjAyMDExMDFfMyAg/MDAxNjA0MjI5NDA4NDMy.5zGHwAo_UtaQFX8Hd7zrDi1WiV5KrDsPHcRzu3e6b8Eg.IlkR3QN__c3o7Qe9z5_xYyCyr2vcx7L_W1arNFgwAJwg.JPEG.gambasg/%EC%9C%A0%ED%8A%9C%EB%B8%8C_%EA%B8%B0%EB%B3%B8%ED%94%84%EB%A1%9C%ED%95%84_%ED%8C%8C%EC%8A%A4%ED%85%94.jpg?type=w800"
-                         th:unless="${#authentication.principal.imgFilePath}"/>
-                </div>
+
 
 
 
@@ -224,7 +229,7 @@
 
 
                 <div class="grid grid-cols-2 mt-2 gap-2">
-                    <a th:unless="${#authentication.principal.userName.startsWith('KAKAO_') || #authentication.principal.userName.startsWith('NAVER_')}" href="/member/modifyPassword" class="btn btn-secondary btn-outline">비밀번호 변경</a>
+                    <a th:unless="${#authentication.principal.userName.startsWith('KAKAO_') || #authentication.principal.userName.startsWith('NAVER_')}" href="/mypage/changePassword" class="btn btn-secondary btn-outline">비밀번호 변경</a>
                     <!--                    <a th:unless="${@rq.hasAuthority('AUTHOR')}" href="/member/beAuthor" class="btn btn-primary">작가활동 시작</a>-->
                     <!--                    <a th:if="${@rq.hasAuthority('AUTHOR')}" class="btn btn-primary btn-disabled">이미 작가회원입니다.</a>-->
                 </div>
