--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -114,7 +114,7 @@
 
             <a href="#" class="inline-flex flex-shrink-0">
                 <span class="ml-[2px]">
-                    메뉴 3
+                    장바구니
                 </span>
             </a>
 
@@ -158,6 +158,7 @@
         }
         return true;
     }
+
 
 </script>
 </body>
