--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -19,6 +19,22 @@
 
     <!-- 테일윈드 -->
     <script src="https://cdn.tailwindcss.com"></script>
+
+    <script>
+        // 페이지 로딩 시 실행
+        window.onload = function() {
+            // 현재 페이지 URL을 가져오기
+            var currentUrl = window.location.href;
+            // 비밀번호 변경 페이지로의 접근 여부 확인
+            if (currentUrl.includes("/mypage/changePassword")) {
+                // 소셜 계정인 경우 알림창 출력
+                if ("<%= request.getAttribute('isSocialAccount') %>" === "true") {
+                    alert("소셜계정은 비밀번호를 변경하실 수 없습니다.");
+                    // 리다이렉트 또는 다른 동작 수행 가능
+                }
+            }
+        };
+    </script>
 </head>
 
 <body class="min-h-screen flex flex-col pt-[35px] md:pt-[50px]">
@@ -90,12 +106,10 @@
             </a>
 
             <a href="/member/profile" class="inline-flex items-center" sec:authorize="isAuthenticated()">
-<!--                <i class="fa-solid fa-user"></i>-->
-                <img class="fa-solid fa-user w-12 h-12" style="border : solid 1px; border-radius : 50%;" alt="" th:if="${#authentication.principal.imgFilePath}" th:src="${#authentication.principal.imgFilePath}"/>
-                <img class="fa-solid fa-user w-12 h-12" style="border : solid 1px; border-radius : 50%;" alt="" src="https://mblogthumb-phinf.pstatic.net/MjAyMDExMDFfMyAg/MDAxNjA0MjI5NDA4NDMy.5zGHwAo_UtaQFX8Hd7zrDi1WiV5KrDsPHcRzu3e6b8Eg.IlkR3QN__c3o7Qe9z5_xYyCyr2vcx7L_W1arNFgwAJwg.JPEG.gambasg/%EC%9C%A0%ED%8A%9C%EB%B8%8C_%EA%B8%B0%EB%B3%B8%ED%94%84%EB%A1%9C%ED%95%84_%ED%8C%8C%EC%8A%A4%ED%85%94.jpg?type=w800"
+                <img class="fa-solid fa-user w-12 h-12 rounded-full" alt="" th:if="${#authentication.principal.imgFilePath}" th:src="${#authentication.principal.imgFilePath}"/>
+                <img class="fa-solid fa-user w-12 h-12 rounded-full" alt="" src="https://mblogthumb-phinf.pstatic.net/MjAyMDExMDFfMyAg/MDAxNjA0MjI5NDA4NDMy.5zGHwAo_UtaQFX8Hd7zrDi1WiV5KrDsPHcRzu3e6b8Eg.IlkR3QN__c3o7Qe9z5_xYyCyr2vcx7L_W1arNFgwAJwg.JPEG.gambasg/%EC%9C%A0%ED%8A%9C%EB%B8%8C_%EA%B8%B0%EB%B3%B8%ED%94%84%EB%A1%9C%ED%95%84_%ED%8C%8C%EC%8A%A4%ED%85%94.jpg?type=w800"
                      th:unless="${#authentication.principal.imgFilePath}"/>
                 <span class="ml-[2px]">
-<!--                   <svg width="20" height="20"></svg>-->
                 </span>
                 <span class="ml-[2px] hidden lg:block items-center" th:if="${#authentication.principal.nickName}" th:text="${#authentication.principal.nickName + ' 님'}">
                 </span>
