--- a/src/main/resources/templates/member/updateProfile.html
+++ b/src/main/resources/templates/member/updateProfile.html
@@ -22,10 +22,10 @@
                     <div class="user-img-box flex items-center gap-4 justify-between">
                         <label class="text-gray-600 cursor-pointer flex items-center space-x-2" for="avatar1">
                             <!-- 실시간 이미지 미리보기 -->
-                            <img class="preview-image h-20 w-20 rounded-full"
+                            <img class="preview-image h-20 w-20 rounded-full border-solid border-black border"
                                  th:if="${#authentication.principal.imgFilePath}"
                                  th:src="${#authentication.principal.imgFilePath}"/>
-                            <img class="preview-image h-20 w-20 rounded-full"
+                            <img class="preview-image h-20 w-20 rounded-full border-solid border-black border"
                                  src="https://mblogthumb-phinf.pstatic.net/MjAyMDExMDFfMyAg/MDAxNjA0MjI5NDA4NDMy.5zGHwAo_UtaQFX8Hd7zrDi1WiV5KrDsPHcRzu3e6b8Eg.IlkR3QN__c3o7Qe9z5_xYyCyr2vcx7L_W1arNFgwAJwg.JPEG.gambasg/%EC%9C%A0%ED%8A%9C%EB%B8%8C_%EA%B8%B0%EB%B3%B8%ED%94%84%EB%A1%9C%ED%95%84_%ED%8C%8C%EC%8A%A4%ED%85%94.jpg?type=w800"
                                  th:unless="${#authentication.principal.imgFilePath}"/>
                             <input accept="image/png, image/jpeg, image/jpg" class="hidden" id="avatar1" name="file"
