디렉토리 정리(domain, base, standard) 국내도서, 외국도서 list 세팅

--- a/src/main/resources/templates/admin/list.html
+++ b/src/main/resources/templates/admin/list.html
@@ -80,6 +80,7 @@
         <th th:text="${article.register}"></th>
         <th th:text="${article.createDate}"></th>
         <th th:text="${article.modifyDate}"></th>
+        <th th:text="${article.modifyDate}"></th>
     </tr>
 </table>
 <h1>정산 관리</h1>
