엔티티별로 SuperBuilder어노테이션 적용, 회원정보 수정 후 자동 로그아웃 처리

--- a/src/main/resources/templates/member/modifyPassword.html
+++ b/src/main/resources/templates/member/modifyPassword.html
@@ -62,8 +62,7 @@
                     dataType: 'json',
                     success: function(result) {
                         if (result.success) {
-                            alert("비밀번호가 성공적으로 변경되었습니다. 변경된 비밀번호로 로그인해주세요.");
-
+                            alert("비밀번호가 성공적으로 변경되었습니다.\n변경된 비밀번호로 로그인해주세요.");
                             // 로그아웃 처리
                             $.ajax({
                                 type: 'POST',
